--- a/conf.yml
+++ b/conf.yml
@@ -1,10 +1,11 @@
 steamCMD:
       steamCMD_dir: steamcmd
-      login: 
-      password: 
+      login: Prenthes
+      password: 36998510
 game:
       game_id: 233780
       game_dir: arma_server
+      game_firewall: 2302
       game_mods:
         cba3: 450814997
         task_force_radio: 620019431        
